--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 # ChangeLog
 
+## 1.1.0 - Jun 04 2022
+
+ - Added +69 new CVE descriptions
+ - Renamed `--config` option to `--kernel-config`
+ - Added `--config` option to support config.ini files with default settings
+ - Added `--metadata` option to support custom path to kernel_cves.json.gz
+ - Added `CVEHOUND_METADATA` environment to support custom path to
+   kernel_cves.json.gz
+ - Added file and line fields to json report
+ - Fixed kernel sources detection problem for kernels < 2.6.12-rc2
+ - Renamed CVE-2022-0886 (rejected) to CVE-2022-27666
+
 ## 1.0.9 - Apr 04 2022
 
  - Added +43 new CVE descriptions
